--- a/src/css/cadastro.css
+++ b/src/css/cadastro.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Bebas Neue", sans-serif;
 }
 
 /* Remoção dos estilos padrão de listas */
@@ -15,7 +16,7 @@ ul, ol {
 
 /* Cabeçalho */
 header {
-    background-color: #BFB9AE;
+    background-color: #476CFF;
     height: auto;
     max-height: 120px;
     width: 100%;
@@ -35,6 +36,12 @@ header a {
     display: flex;
 }
 
+.bebas-neue-regular {
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 /* Corpo da página */
 body {
     background-color: #f3ece8;
@@ -46,7 +53,7 @@ body {
 /* Bloco de login */
 .cadastro {
     border-radius: 60px;
-    background-color: #BFB9AE;
+    background-color: #F7B239;
     padding: 40px 40px;
     display: flex;
     flex-direction: column;
@@ -95,6 +102,7 @@ body {
     border-radius: 13px;
     font-size: 18px;
     cursor: pointer;
+    box-shadow: 5px 5px 0px #0002; /* Sombra suave */
 }
 
 .ancoras{
@@ -130,7 +138,7 @@ body {
 footer {
     /* Removido height: 100%; */
     margin-top: auto;
-    background-color: #BFB9AE;
+    background-color: #476CFF;
     width: 100%;
     padding: 70px 0; /* para dar altura visual, ao invés de height fixa */
     display: flex;
