--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,24 +10,35 @@ html, body {
 }
 
 header{
-    background-color: #BFB9AE;
-    height: 80px;
+     margin-top: auto;
+    background-color: #476CFF;
+    width: 100%;
+    padding: 20px 0; /* para dar altura visual, ao invés de height fixa */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-body{
-    background-color: #F2EEEB;
+body {
+    background-color: #f3ece8;
+    height: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .Jogar{
     display: flex;
     flex-direction: column;
-
     margin-top: 100px;
     align-items: center;
     justify-content: center;
-
     gap: 70px;
+}
 
+img{
+    background-color: #f3e700;
+    
 }
 
 .Jogar a{
@@ -41,9 +52,25 @@ body{
     background-size: auto;
     padding: 10px 90px; 
     display: inline-block;
+    box-shadow: 5px 5px 0px #0002; /* Sombra suave */
     
 }
 
 .Jogar img{
     border-radius: 80px;
+}
+
+.logo-jogar{
+  margin-bottom:70px;
+}
+
+footer {
+    /* Removido height: 100%; */
+    margin-top: auto;
+    background-color: #476CFF;
+    width: 100%;
+    padding: 10px 0; /* para dar altura visual, ao invés de height fixa */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
