--- a/src/css/perfil.css
+++ b/src/css/perfil.css
@@ -85,7 +85,7 @@ header a {
     width: 400px;
     /* min-height: 200px;  Remova ou comente esta linha */
     border-radius: 16px;
-    box-shadow: 0 4px 16px #0002;
+    box-shadow: 6px 6px 0px rgba(0, 0, 0, 0.133);
     padding: 32px 24px;
     display: flex;
     flex-direction: column;
