--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,83 +1,69 @@
-*{
+html, body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Bebas Neue", sans-serif;
-}
-
-
-html, body {
-    height: 100%;
-}
-
-header{
-
-    background-color: #476CFF;
-    width: 100%;
-    padding: 20px 0; /* para dar altura visual, ao invés de height fixa */
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    height: 100vh;
+    overflow: hidden;
 }
 
 body {
-    background-color: #f3ece8;
-    height: 100%;
-    min-height: 100vh;
+    background-color: #87ceeb;
     display: flex;
     flex-direction: column;
 }
 
-.Jogar{
+header {
+    background-color: #191970;
+    width: 100%;
+    padding: 20px 0;
     display: flex;
-    flex-direction: column;
-    margin-top: 100px;
     align-items: center;
     justify-content: center;
-    gap: 70px;
 }
 
-img{
-    border: 4px solid #F38B45;
-    /* Impede arrastar e copiar */
-    -webkit-user-drag: none;   /* Chrome/Safari */
-    user-select: none;         /* Não permite seleção */
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    
+.logo-jogar {
+    flex: 1; /* ocupa o espaço restante */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.Jogar a{
-    font-size: 60px;
+.Jogar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5vh;
+    margin-top: 0;
+}
+
+.Jogar img {
+    height: 50vh; /* 30% da altura da tela */
+    width: auto; /* Mantém proporção */
+    border: 4px solid #9ac6e3;
+    border-radius: 40px;
+    background-color: #add8e6;
+    -webkit-user-drag: none;
+    user-select: none;
+}
+
+.Jogar a {
+    font-size: 5vh;
     color: white;
     text-decoration: none;
-
-
-    border-radius: 30px;
-    background-color: #0FC570;
-    background-size: auto;
-    padding: 10px 90px; 
-    display: inline-block;
-    box-shadow: 5px 5px 0px #0002; /* Sombra suave */
-    
-}
-
-.Jogar img{
-    border-radius: 80px;
-}
-
-.logo-jogar{
-  margin-bottom:70px;
+    border-radius: 20px;
+    background-color: #1e90ff;
+    padding: 3vh 8vh; 
+    box-shadow: 5px 5px 0px #0002;
 }
 
 footer {
-    /* Removido height: 100%; */
-    margin-top: auto;
-    background-color: #476CFF;
+    background-color: #191970;
     width: 100%;
-    padding: 10px 0; /* para dar altura visual, ao invés de height fixa */
+    padding: 5px 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    color: #add8e6;
 }
