--- a/src/css/login.css
+++ b/src/css/login.css
@@ -35,15 +35,15 @@ body {
 }
 
 .login {
-    border-radius: 20px;
+    border-radius: 15px;
     background-color: #9ac6e3;
-    padding: 50px 60px; /* mais espaçamento interno */
+    padding: 50px 60px; 
     display: flex;
     flex-direction: column;
     gap: 35px;
     font-size: 26px;
-    width: 100%;
-    max-width: 700px; /* largura maior */
+    width: 550px;
+    max-width: 600px; 
     box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
     margin: 50px 0;
 }
@@ -73,19 +73,6 @@ body {
     font-size: 20px;
 }
 
-.login button {
-    width: 160px;
-    height: 55px;
-    margin-top: 15px;
-    align-self: flex-end;
-    color: #FFF;
-    background-color: #F38B45;
-    border: none;
-    border-radius: 15px;
-    font-size: 20px;
-    cursor: pointer;
-    box-shadow: 6px 6px 0 rgba(0, 0, 0, 0.2);
-}
 
 .ancoras {
     width: 100%;
@@ -137,15 +124,7 @@ footer {
     font-weight: bold;
 }
 
-.campo input {
-    background-color: #F3EEE8;
-    width: 100%;
-    height: 55px;
-    border-radius: 12px;
-    border: none;
-    padding: 0 12px;
-    font-size: 18px;
-}
+
 
 .avançar {
     width: 140px;
@@ -161,16 +140,5 @@ footer {
     box-shadow: 5px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
-/* Responsividade */
-@media (max-width: 768px) {
-    .login {
-        padding: 40px 30px;
-        max-width: 90%;
-    }
 
-    .login button, .avançar {
-        width: 100%;
-        align-self: center;
-    }
-}
 
